--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,6 +57,7 @@
 @import "./blocks/cases-swiper";
 @import "./blocks/form-section";
 @import "./blocks/consultation";
+@import "./blocks/projects";
 // @import "./blocks/case";
 // @import "./blocks/subscribe-section";
 
