сделал свайпер с отзывами

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -58,6 +58,8 @@
 @import "./blocks/form-section";
 @import "./blocks/consultation";
 @import "./blocks/projects";
+@import "./blocks/review-card";
+@import "./blocks/reviews";
 // @import "./blocks/case";
 // @import "./blocks/subscribe-section";
 
@@ -75,7 +77,7 @@
 // @import "./blocks/contacts";
 // @import "./blocks/certificates";
 // @import "./blocks/our-advantages";
-// @import "./blocks/reviews";
+
 //
 // @import "./blocks/need-help";
 //
