--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -35,6 +35,29 @@
   }
 }
 
+@mixin image-hover {
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgb(1 29 170 / 30%);
+    transition: opacity 0.3s ease;
+    opacity: 0;
+  }
+  &:hover {
+    @media (pointer: fine) {
+      &::after {
+        opacity: 0.3;
+      }
+    }
+  }
+}
+
 @mixin container-link {
   position: absolute;
   top: 0;
