сделал миксин на обрезку текста по вертикали

--- a/src/scss/blocks/review-card.scss
+++ b/src/scss/blocks/review-card.scss
@@ -64,6 +64,8 @@
   font-size: 16px;
   line-height: 19px;
   color: $black-color;
+
+  @include vertical-trimmed-text(10);
 }
 
 .reviews-swiper__slide {
