сделал страничку проекта спарман

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,7 +60,7 @@
 @import "./blocks/projects";
 @import "./blocks/review-card";
 @import "./blocks/reviews";
-// @import "./blocks/case";
+@import "./blocks/case";
 // @import "./blocks/subscribe-section";
 
 // @import "./blocks/completed-projects";
