--- a/src/views/blocks/case.j2
+++ b/src/views/blocks/case.j2
@@ -1,175 +1,57 @@
-<section class="case section">
+<section class="case section section--first-on-page">
   <div class="case__container container">
     <div class="case__content section__content">
       <div class="case__header">
-        <h1 class="case__title title">Проектирование и монтаж&nbsp;СКС, ЭОМ Офиса компании «ОТКРЫТИЕ БРОКЕР»</h1>
-        <img class="case__logo" src="@img/otkritie-logo.svg" alt="Логотип компании Открытие брокер" width="151" height="46">
-      </div>
-      <div class="case__metrics-wrapper">
-        <ul class="case__metrics">
-          <li class="case__metrics-item">
-            <dl class="case__metrics-item-wrapper">
-              <dt class="case__metrics-name">Срок:</dt>
-              <dd class="case__metrics-value">14 дней</dd>
-            </dl>
-          </li>
-          <li class="case__metrics-item">
-            <dl class="case__metrics-item-wrapper">
-              <dt class="case__metrics-name">Площадь:</dt>
-              <dd class="case__metrics-value">3 500 м2</dd>
-            </dl>
-          </li>
-          <li class="case__metrics-item">
-            <dl class="case__metrics-item-wrapper">
-              <dt class="case__metrics-name">Количество портов:</dt>
-              <dd class="case__metrics-value">1200 шт</dd>
-            </dl>
-          </li>
-          <li class="case__metrics-item">
-            <dl class="case__metrics-item-wrapper">
-              <dt class="case__metrics-name">Количество портов:</dt>
-              <dd class="case__metrics-value">1200 шт</dd>
-            </dl>
-          </li>
-        </ul>
+        <h1 class="case__title page__title">Проект для Spaarmann</h1>
+        <div class="case__header-image-wrapper">
+          <img src="@img/project-header-image-desktop.webp" alt="" class="case__header-image" width="1116" height="254">
+        </div>
       </div>
       <div class="case__main section__main">
-        <div class="case__daw-list daw-list">
-          <h3 class="case__sub-title">Задачи:</h3>
-          <ul class="daw-list__list">
-            <li class="daw-list__item">Спроектировать ИТ-инфраструктуру и систему электроснабжения нового офиса в сжатый срок;</li>
-            <li class="daw-list__item">Осуществить поставку материалов;</li>
-            <li class="daw-list__item">Выполнить работы по монтажу СКС, <span>1052 порта</span>;</li>
-            <li class="daw-list__item">Выполнить монтаж системы электроснабжения рабочих мест, серверной и узлов коммутации;</li>
-            <li class="daw-list__item">Создать систему бесперебойного электроснабжения для потребителей, для которых перерыв электроснабжения недопустим, путём сборки этих потребителей в отдельные щиты, подключенные от ИБП;</li>
-            <li class="daw-list__item">Восстановление исполнительной документации по кондиционированию и освещению;</li>
-            <li class="daw-list__item">Восстановление схем коммутации питания, системы резервирования от ИБП и ДГУ.</li>
-          </ul>
-        </div>
-        <a class="case__big-photo-wrapper" href="@img/cases/photo-1-big.webp" data-image-can-open-in-modal>
-          <picture>
-            <source type="image/webp" srcset="@img/cases/photo-1-big.webp 1x">
-            <img class="case__photo" src="@img/cases/photo-1-big.jpg" alt="Фотография из кейса 1" loading="lazy" width="722" height="412">
-          </picture>
-        </a>
         <div class="case__text-block">
-          <h3 class="case__sub-title">Решение:</h3>
-          <p class="case__text-par">Это был уже третий наш собственный ЦОД и далеко не первый и даже не двадцатый из тех, что мы строили или помогали строить по всей стране для различных заказчиков. Соответственно, к этому моменту мы уже имели отличную команду инженеров и проверенных поставщиков.</p>
-          <h4 class="case__text-title">Базовые параметры ЦОД «Компрессор»</h4>
+          <h3 class="case__sub-title">Заказчик</h3>
+          <p class="case__text-par">Компания Spaarmann оказывает услуги по таможенному оформлению, перевозке международных грузов и транспортно-экспедиционные услуги на территории России</p>
+        </div>
+        <div class="case__text-block">
+          <h3 class="case__sub-title">Задачи проекта</h3>
+          <p class="case__text-par">В связи с изменением структуры ИТ-отдела, Заказчик принял решения передать обязанности по поддержке, обслуживанию и модернизации ИТ-инфраструктуры внешнему подрядчику. Данный подход имеет ряд преимуществ для бизнеса, к которым можно отнести:</p>
           <ul class="list case__text-list">
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-            <li class="list__item case__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nulla, est sit nesciunt consequuntur debitis, quas aut eligendi labore deserunt velit doloremque temporibus animi neque, numquam adipisci. Eligendi, necessitatibus. Cumque?</li>
-          </ul>
-          <p class="case__text-par">Строительство «Компрессора» мы начали в 2009 году. Хотелось сделать всё по уму, поскольку специфика некоторых наших клиентов такова, что ЦОДы должны работать несмотря ни на что. Был выбран уровень TIER-III как наиболее соответствующий задачам (такие ЦОДы продолжают стабильно работать без изменений при выходе любого узла системы из строя и имеют показатель доступности 99,98%). Мы прошли сертификацию Uptime Institute по проекту и по объекту – до нас в России было всего два ЦОДа такого уровня.</p>
-          <p class="case__text-par">Итак, на начало работ у нас было здание. В целом оно было в хорошем состоянии. Мы добавили перекрытия между первым и вторым этажом, плюс нарастили третий этаж под бытовые нужды (например, там сейчас столовая).</p>
-          <p class="case__text-par">Вот и всё. После того, как фасад здания был полностью облицован, мы ещё привели в порядок территорию, поставили забор для охраны и посадили газон</p>
-          <p class="case__text-par"><a href="#!" class="link">Ссылки</a></p>
-          <p class="case__text-par">Вот здесь есть фотоэскурсия по данному ЦОД, здесь – больше деталей, а вот здесь – про особенности сертификации.</p>
-          <p class="case__text-par">P.S. Если интересно, я напишу пост про оборудование, инженерные системы и поставщиков (кстати, некоторые отечественные поставщики очень даже неплохо себя зарекомендовали).</p>
-        </div>
-        <div class="case__daw-list daw-list--result">
-          <h2 class="case__sub-title">РЕЗУЛЬТАТ</h2>
-          <ul class="daw-list__list">
-            <li class="daw-list__item">СКС построена с применением материалов и компонентов Hyperline, с оптимальным соотношением «цена/качество», что <span>позволило сократить расходы без снижения качества и надежности коммутации оборудования</span>;</li>
-            <li class="daw-list__item">Все электрощиты перебраны, старые автоматы заменены, проведена профилактика контактов, составлены и актуализированы схемы электрощитов;</li>
-            <li class="daw-list__item">Восстановлена исполнительная документация по кондиционированию и освещению;</li>
-            <li class="daw-list__item">ИТ-инфраструктура нового офисного помещения запущена в срок.</li>
+            <li class="list__item case__text-list-item">отсутствие временных издержек на поиск специалистов;</li>
+            <li class="list__item case__text-list-item">оптимизация затрат на обучение и подготовку нового сотрудника;</li>
+            <li class="list__item case__text-list-item">снижение налогооблагаемой базы, ввиду отсутствия необходимости платить налоги за штатных работников;</li>
+            <li class="list__item case__text-list-item">четкий контроль над расходами по эксплуатации IT-сервисов, работы выполняются согласно договору и соглашению об уровне качества сервиса SLA;</li>
+            <li class="list__item case__text-list-item">повышение уровня качества и эффективности работы IT-сервисов за счет правильной оценки задач и привлечение сотрудников с требуемой квалификацией для их решения.</li>
           </ul>
         </div>
-        <div class="case__gallery">
-          {% set SLIDES_NUM = 6 %}
-          <div class="case__gallery-swiper-wrapper section__card-swiper-container">
-            <div class="case__gallery-swiper swiper section__card-swiper" data-case-swiper>
-              {% if sectionCardSwiperCnt is not defined %}
-                {% set sectionCardSwiperCnt = 1 %}
-              {% endif %}
-
-              <div class="case__gallery-swiper-buttons section__card-swiper-buttons">
-                <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
-                  <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-                    <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-                  </svg>
-                  <span class="visually-hidden">Перелестнуть назад</span>
-                </button>
-                <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
-                  <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-                    <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-                  </svg>
-                  <span class="visually-hidden">Перелестнуть вперед</span>
-                </button>
-              </div>
-              <div class="case__gallery-grid swiper-wrapper">
-                {% set photoCounter = 1 %}
-                {% for imageCount in range(SLIDES_NUM) %}
-                  <div class="case__gallery-swiper-slide swiper-slide">
-                    <a class="case__photo-wrapper" href="@img/cases/photo-{{ photoCounter }}-big.webp" data-image-can-open-in-modal>
-                      <picture>
-                        <source type="image/webp" srcset="@img/cases/photo-{{ photoCounter }}.webp 1x">
-                        <img class="case__photo" src="@img/cases/photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}" loading="lazy" width="230" height="156">
-                      </picture>
-                    </a>
-                  </div>
-                {% endfor %}
-              </div>
-            </div>
-          </div>
+        <div class="case__text-block">
+          <h3 class="case__sub-title">Решение и продукты</h3>
+          <p class="case__text-par">В результате собранных данных и проведенного анализа был определен список ключевых ИТ-сервисов для бизнеса, составлены четкие требования к ИТ-процессам и выбрана концепция управления. Правильный выбор ключевых ИТ-сервисов для бизнеса позволяет повысить отказоустойчивость ИТ-инфраструктуры. Также важным критерием является надежная защита данных клиента от потери и хакерских атак.</p>
+          <p class="case__text-par">В ходе работы над проектом были реализованы следующие задачи:</p>
+          <ul class="list case__text-list">
+            <li class="list__item case__text-list-item">обновление серверного и сетевого оборудования без прерывания рабочего процесса компании;</li>
+            <li class="list__item case__text-list-item">миграция критически важных сервисов для компании в дата-центр;</li>
+            <li class="list__item case__text-list-item">обновление корпоративного сервиса электронной почты;</li>
+            <li class="list__item case__text-list-item">настройка безопасного сервиса для удаленного подключения сотрудников компании;</li>
+            <li class="list__item case__text-list-item">согласование матрицы прав доступа к корпоративным файловым ресурсам компании с последующей настройкой;</li>
+            <li class="list__item case__text-list-item">внедрение антивируса корпоративного уровня с централизованным управлением;</li>
+            <li class="list__item case__text-list-item">настройка процесса резервного копирования.</li>
+          </ul>
+          <p class="case__text-par">Впоследствии компания EXASystems выполнила услуги по сервисному обслуживанию информационно-технологической инфраструктуры, обеспечив оперативную техническую поддержку и минимизировав риски, связанные со сбоями и простоями в работе ИТ-сервисов.</p>
         </div>
-
-        {# Вендоры #}
-        <div class="case__vendors vendors">
-          <div class="section__content">
-            <h3 class="visually-hidden">Вендоры, используемые в проекте</h3>
-            <p class="case__sub-title">В ПРОЕКТЕ ИСПОЛЬЗОВАЛИ ПРОДУКТЫ ВЕНДОРОВ:</p>
-            {% set sectionCardSwiperCnt = sectionCardSwiperCnt + 1 %}
-            {% set SLIDES_NUM = 5 %}
-            <div class="vendors__swiper-container section__card-swiper-container">
-              <div class="section__card-swiper swiper" data-case-swiper>
-                <div class="case__gallery-swiper-buttons section__card-swiper-buttons">
-                  <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
-                    <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-                      <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-                    </svg>
-                    <span class="visually-hidden">Перелестнуть назад</span>
-                  </button>
-                  <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
-                    <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-                      <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-                    </svg>
-                    <span class="visually-hidden">Перелестнуть вперед</span>
-                  </button>
-                </div>
-                <div class="case__gallery-grid swiper-wrapper">
-                    {% for slideIndex in range(SLIDES_NUM) %}
-                      <div class="section__card-swiper-slide swiper-slide">
-                        <a class="vendors__item-wrapper vendors__item-wrapper--case" href="./vendor-page.html">
-                          <img class="vendors__company-logo" width="136" height="41" src="@img/postgrespro-logo.svg" alt="Логотип компании PostgresPro.">
-                          <p class="vendors__company-about">Системы управления базами данных</p>
-                        </a>
-                      </div>
-                    {% endfor %}
-                  </div>
-              </div>
-            </div>
-          </div>
+        <div class="case__text-block">
+          <h3 class="case__sub-title">Заказчик</h3>
+          <p class="case__text-par">В результате выполненных работ Заказчик получил современную, безопасную ИТ-инфраструктуру, которая позволяет выполнять задачи своевременно за прогнозируемое время.</p>
+          <p class="case__text-par">Сотрудники Заказчика были проинформированы о начале работы с новым поставщиком ИТ-услуг. Взаимодействие происходит посредством системы Service Desk. Данная информационная платформа позволяет оперативно реагировать на происшествия и контролировать ход их решения в виде единого окна. Помимо этого, Заказчику предоставляется отчет о проделанной работе за месяц, что делает взаимодействие понятным, позволяя спрогнозировать будущие работы и затраты на ИТ.</p>
         </div>
         {# Отзыв #}
         <div class="case__reviews">
-          <h3 class="case__sub-title">ОТЗЫВ ЗАКАЗЧИКА:</h3>
+          <h3 class="case__sub-title">Отзыв заказчика</h3>
           <div class="case__review">
             <a class="case__review-link" href="@img/review-letter.jpg" data-review data-image-can-open-in-modal>
               <img class="case__review-image" src="@img/review-letter.jpg" alt="">
             </a>
             <div class="case__review-text-container">
-              <img class="case__review-company-logo" width="136" height="41" src="@img/postgrespro-logo.svg" alt="Логотип компании PostgresPro.">
+              <img class="case__review-company-logo" width="170" height="60" src="@img/cases/logos/spaarmann.webp" alt="Логотип компании C. Spaarmann GmbH.">
               <p class="case__review-text">Немецкая логистическая компания <b>C. Spaarmann GmbH</b> рекомендует команду Exasystems к сотрудничеству, которая произвела ее успешный переход на удаленный режим работы и снизила расходы на ИТ.</p>
             </div>
           </div>
