--- a/src/views/blocks/swipers/cases-swiper.j2
+++ b/src/views/blocks/swipers/cases-swiper.j2
@@ -78,7 +78,7 @@
                         <p class="case-card__par">{{ caseItem.description2 | safe }}</p>
                       {% endif %}
                     </div>
-                    <a href="#!" class="case-card__more-link">Подробнее</a>
+                    <a href="./project-page.html" class="case-card__more-link">Подробнее</a>
                   </div>
                 </div>
               </div>
