--- a/src/views/pages/projects.j2
+++ b/src/views/pages/projects.j2
@@ -84,7 +84,7 @@
                         <p class="case-card__par">{{ caseItem.description2 | safe }}</p>
                       {% endif %}
                     </div>
-                    <a href="#!" class="case-card__more-link">Подробнее</a>
+                    <a href="./project-page.html" class="case-card__more-link">Подробнее</a>
                   </div>
                   <div class="case-card__photo-wrapper">
                     <img class="case-card__photo" src="{{ caseItem.photo.src | safe }}" alt="{{ caseItem.photo.alt | safe }}" width="683" height="448">
