сделал страничку партнеров

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -61,6 +61,7 @@
 @import "./blocks/review-card";
 @import "./blocks/reviews";
 @import "./blocks/case";
+@import "./blocks/partners";
 // @import "./blocks/subscribe-section";
 
 // @import "./blocks/completed-projects";
