--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,6 +62,7 @@
 @import "./blocks/reviews";
 @import "./blocks/case";
 @import "./blocks/partners";
+@import "./blocks/about";
 // @import "./blocks/subscribe-section";
 
 // @import "./blocks/completed-projects";
