--- a/src/views/blocks/swipers/vendors-swiper.j2
+++ b/src/views/blocks/swipers/vendors-swiper.j2
@@ -69,7 +69,7 @@
     <div class="article__content">
       <div class="vendors__header">
         <h3 class="article__title title">Наши партнеры</h3>
-        <a href="./vendors.html" class="vendors__all-link">Все партнеры</a>
+        <a href="./partners.html" class="vendors__all-link">Все партнеры</a>
       </div>
 
       <div class="vendors__swiper-container card-swiper-container">
