--- a/src/scss/blocks/facts.scss
+++ b/src/scss/blocks/facts.scss
@@ -8,6 +8,10 @@
     margin-top: 40px;
   }
 }
+
+.facts:last-child {
+  margin-bottom: 0;
+}
 .facts__content {
   display: flex;
   flex-direction: column;
