--- a/src/scss/blocks/page.scss
+++ b/src/scss/blocks/page.scss
@@ -38,6 +38,13 @@
   }
 }
 
+.page__paragraph {
+  margin: 0;
+  padding: 0;
+  font-size: 17px;
+  line-height: 140%;
+}
+
 .menu-opened {
   @media (max-width: $max-tablet-width) {
     & .page-main {
