сделал кликабельными карточки проектов

--- a/src/views/blocks/swipers/cases-swiper.j2
+++ b/src/views/blocks/swipers/cases-swiper.j2
@@ -67,6 +67,7 @@
           {% for caseItem in CASES %}
             <div class="cases-swiper__slide card-swiper__slide swiper-slide">
               <div class="case-card">
+                <a href="./project-page.html" class="case-card__full-card-link"></a>
                 <div class="case-card__content">
                   <div class="case-card__main">
                     <div class="case-card__logo-wrapper">
