--- a/src/views/pages/projects.j2
+++ b/src/views/pages/projects.j2
@@ -73,6 +73,7 @@
           <ol class="projects__list">
             {% for caseItem in CASES %}
               <li class="projects__list-item case-card">
+                <a href="./project-page.html" class="case-card__full-card-link"></a>
                 <div class="case-card__content">
                   <div class="case-card__main">
                     <div class="case-card__logo-wrapper">
