--- a/src/scss/blocks/case-card.scss
+++ b/src/scss/blocks/case-card.scss
@@ -1,4 +1,5 @@
 .case-card {
+  position: relative;
   display: flex;
 
   background-color: $bg2-color;
@@ -6,6 +7,7 @@
   height: 100%;
   color: $dark-color;
 }
+
 .case-card__content {
   display: flex;
   flex-grow: 1;
@@ -39,7 +41,7 @@
   margin-top: 23px;
   margin-bottom: 25px;
   line-height: 125%;
-  // max-height: 200px;
+
   display: -webkit-box;
   overflow: hidden;
   -webkit-box-orient: vertical;
@@ -54,6 +56,7 @@
 }
 .case-card__more-link {
   margin-top: auto;
+  z-index: 1;
 }
 
 .case-card__photo-wrapper {
@@ -71,4 +74,32 @@
 
 .case-card__photo {
   @include image-in-wrapper;
+}
+
+.case-card__full-card-link {
+  @include container-link;
+
+  background-color: transparent;
+  // opacity: 0;
+  transition: background-color 0.3s ease;
+
+  &:focus-visible {
+    outline: solid 2px $blue-color;
+    outline-offset: -2px;
+  }
+}
+
+.case-card {
+  &:hover {
+    @media (pointer: fine) {
+      @media (width >= $desktop-width) {
+        & .case-card__full-card-link {
+          background-color: transparentize($color: $blue-color, $amount: 0.9);
+        }
+      }
+    }
+  }
+  &:active {
+    opacity: 0.6;
+  }
 }
