--- a/src/views/pages/projects.j2
+++ b/src/views/pages/projects.j2
@@ -60,7 +60,7 @@
                 </select>
               </label>
               <label class="projects__form-label form__label">
-                <span class="projects__form-label-text form__label-text">Решения</span>
+                <span class="projects__form-label-text form__label-text">Производители</span>
                 <select class="projects__form-select form__select" id="projects-form-vendor" name="projects-form-vendor" data-form-select-one>
                   <option value="Все" label="Все">Все</option>
                   {% for i in range(7) %}
