сделал страничку команды

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,6 +63,8 @@
 @import "./blocks/case";
 @import "./blocks/partners";
 @import "./blocks/about";
+@import "./blocks/person-card";
+@import "./blocks/team";
 // @import "./blocks/subscribe-section";
 
 // @import "./blocks/completed-projects";
