сделал слайдер команды

--- a/src/views/pages/about.j2
+++ b/src/views/pages/about.j2
@@ -60,6 +60,7 @@
     {% include "./blocks/facts.j2" %}
 
     {% set cardSwiperCnt = 1 %}
+    {% include "./blocks/swipers/team-swiper.j2" %}
     {# {% include "./blocks/swipers/reviews-swiper.j2" %} #}
     {# {% set cardSwiperCnt = cardSwiperCnt + 1 %}
     {% include "./blocks/swipers/cases-swiper.j2" %} #}
