--- a/src/scss/blocks/team.scss
+++ b/src/scss/blocks/team.scss
@@ -1,5 +1,4 @@
 .team {
-  padding-top: 30px;
 }
 .team__content {
   display: flex;
@@ -22,4 +21,18 @@
 }
 
 .team__item {
+}
+
+.team__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.team__all-link {
+  font-size: 18px;
+  font-family: $jost-font;
+
+  @media (width < $tablet-width) {
+    display: none;
+  }
 }
