--- a/src/views/blocks/team.j2
+++ b/src/views/blocks/team.j2
@@ -1,5 +1,5 @@
 {% set teamMemberCounter = 1 %}
-<section class="team section">
+<section class="team section section--first-on-page">
   <div class="container">
     <div class="team__content">
       <ul class="team__list">
